--- a/portfolie.html
+++ b/portfolie.html
@@ -12,11 +12,23 @@
  <body>
 
      <section id="tema-1">
+
          <h1>Grundlæggende web</h1>
 
+         <br>
+         <br>
 
+         <p>
+             Sed dictum posuere augue, id egestas turpis. Curabitur massa lacus, dictum a posuere molestie, fringilla eget ligula. Vivamus a erat eget eros porttitor faucibus eget rhoncus ligula. Aenean ut tincidunt dolor. Nunc mollis felis vitae est ultricies, vitae bibendum nisi interdum. Ut euismod nisi lacinia velit ultrices, nec sagittis eros finibus. Sed lobortis fringilla diam sit amet tempus. Sed venenatis mauris et massa efficitur ullamcorper. Etiam placerat, felis nec rhoncus pharetra, sem sapien mollis dolor, et vestibulum justo est sit amet velit. Donec nec lobortis sem. Fusce at vestibulum justo, ultricies pulvinar nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Cras nisl est, condimentum vel nisl eget, efficitur accumsan dolor.
+
+             <ul>
+                 <li><a href="http://itsmeradi.dk/kea/01-web/02-html/01_02_03_stilartsite_v2/">Stilartsite</a></li>
+             </ul>
+
+         </p>
 
      </section>
+
      <section id="tema-2"></section>
      <section id="tema-3"></section>
      <section id="tema-4"></section>
