--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
  <!DOCTYPE html>
-<html lang="da">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex">
-    <title>Portfolie-site</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+ <html lang="da">
 
-<body>
+ <head>
+     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="robots" content="noindex">
+     <title>Portfolie-site</title>
+     <link rel="stylesheet" href="style.css">
+ </head>
 
-    <div id="sidebar">
+ <body>
 
-        <div class="toggle-btn" onclick="toggleSidebar()">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
+     <div id="sidebar">
 
-        <ul>
-            <li><a href="forside.html">forside</a></li>
-            <li><a href="om.html">om</a></li>
-            <li><a href="Portfolie">portfolie</a></li>
-        </ul>
-    </div>
+         <div class="toggle-btn" onclick="toggleSidebar()">
+             <span></span>
+             <span></span>
+             <span></span>
+         </div>
+
+         <ul>
+             <li><a href="forside.html">forside</a></li>
+             <li><a href="om.html">om</a></li>
+             <li><a href="portfolie.html">portfolie</a></li>
+         </ul>
+     </div>
 
 
 
-    <script src="JavaScript.js"></script>
-</body></html>
+     <script src="JavaScript.js"></script>
+ </body>
 
+ </html>
