--- a/portfolie.html
+++ b/portfolie.html
@@ -1,41 +1,41 @@
- <!DOCTYPE html>
- <html lang="da">
+<!DOCTYPE html>
+<html lang="da">
 
- <head>
-     <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="robots" content="no index">
-     <title>Portfolie</title>
-     <link rel="stylesheet" href="style.css">
- </head>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="no index">
+    <title>Portfolie</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
- <body>
+<body>
 
-     <section id="tema-1">
+    <section id="tema-1">
+        <h1>Grundlæggende web</h1>
 
-         <h1>Grundlæggende web</h1>
+        <br>
+        <br>
 
-         <br>
-         <br>
+        <p>Nullam ipsum enim, egestas nec magna nec, semper feugiat est. Sed vel lorem mattis, sollicitudin urna et, pretium risus. Quisque ut luctus felis. Praesent porta orci non dolor fringilla, non fringilla leo accumsan. Nunc cursus neque sit amet eros dignissim, at dapibus ipsum scelerisque. Cras a nulla venenatis, iaculis metus quis, ullamcorper felis. Etiam eu eros sit amet quam semper sagittis. Nam eros quam, sagittis vehicula laoreet in, fermentum id lorem. Pellentesque faucibus laoreet venenatis. Duis porttitor dictum purus, eu mollis nisi pretium iaculis. Fusce eget consequat eros. Etiam in leo laoreet, cursus sem quis, posuere velit. Nam rhoncus erat eu mauris varius, sit amet venenatis libero ultricies. Vivamus in enim eleifend ante tristique auctor. Vestibulum ornare elit sed scelerisque lacinia. Aenean venenatis elit ut nibh vulputate, id ultricies leo facilisis.</p>
 
-         <p>
-             Sed dictum posuere augue, id egestas turpis. Curabitur massa lacus, dictum a posuere molestie, fringilla eget ligula. Vivamus a erat eget eros porttitor faucibus eget rhoncus ligula. Aenean ut tincidunt dolor. Nunc mollis felis vitae est ultricies, vitae bibendum nisi interdum. Ut euismod nisi lacinia velit ultrices, nec sagittis eros finibus. Sed lobortis fringilla diam sit amet tempus. Sed venenatis mauris et massa efficitur ullamcorper. Etiam placerat, felis nec rhoncus pharetra, sem sapien mollis dolor, et vestibulum justo est sit amet velit. Donec nec lobortis sem. Fusce at vestibulum justo, ultricies pulvinar nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam erat volutpat. Cras nisl est, condimentum vel nisl eget, efficitur accumsan dolor.
+        <ul>
+            <li><a href="http://itsmeradi.dk/kea/01-web/02-html/01_02_03_stilartsite_v2/">Stilartsite</a></li>
+        </ul>
 
-             <ul>
-                 <li><a href="http://itsmeradi.dk/kea/01-web/02-html/01_02_03_stilartsite_v2/">Stilartsite</a></li>
-             </ul>
 
-         </p>
-
-     </section>
-
-     <section id="tema-2"></section>
-     <section id="tema-3"></section>
-     <section id="tema-4"></section>
+        <h1></h1>
 
 
 
-     <script src="JavaScript.js"></script>
- </body>
+    </section>
+    <section id="tema-2"></section>
+    <section id="tema-3"></section>
+    <section id="tema-4"></section>
 
- </html>
+
+
+    <script src="JavaScript.js"></script>
+</body>
+
+</html>
