--- a/portfolie.html
+++ b/portfolie.html
@@ -23,8 +23,17 @@
             <li><a href="http://itsmeradi.dk/kea/01-web/02-html/01_02_03_stilartsite_v2/">Stilartsite</a></li>
         </ul>
 
+        <br>
+        <br>
 
-        <h1></h1>
+
+        <h1>Grundlæggende animation</h1>
+
+        <p>Nullam ipsum enim, egestas nec magna nec, semper feugiat est. Sed vel lorem mattis, sollicitudin urna et, pretium risus. Quisque ut luctus felis. Praesent porta orci non dolor fringilla, non fringilla leo accumsan. Nunc cursus neque sit amet eros dignissim, at dapibus ipsum scelerisque. Cras a nulla venenatis, iaculis metus quis, ullamcorper felis. Etiam eu eros sit amet quam semper sagittis. Nam eros quam, sagittis vehicula laoreet in, fermentum id lorem. Pellentesque faucibus laoreet venenatis. Duis porttitor dictum purus, eu mollis nisi pretium iaculis. Fusce eget consequat eros. Etiam in leo laoreet, cursus sem quis, posuere velit. Nam rhoncus erat eu mauris varius, sit amet venenatis libero ultricies. Vivamus in enim eleifend ante tristique auctor. Vestibulum ornare elit sed scelerisque lacinia. Aenean venenatis elit ut nibh vulputate, id ultricies leo facilisis.</p>
+
+        <ul>
+            <li> <a href="http://itsmeradi.dk/kea/02-animation/spil/index.html">Spil</a></li>
+        </ul>
 
 
 
