--- a/om.html
+++ b/om.html
@@ -10,9 +10,24 @@
 
 <body>
 
+    <h1>Om</h1>
+
+    <br>
 
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tempus justo quis orci sagittis pharetra. Fusce ut dui pharetra, facilisis ipsum at, blandit dui. Fusce augue dolor, semper a eros sit amet, ultrices cursus odio. Cras sagittis tellus quis dolor dignissim, in consequat nibh volutpat. Etiam mi massa, tincidunt eget luctus quis, maximus sed velit. Phasellus auctor venenatis neque eu blandit. Cras libero ante, convallis sed finibus eu, cursus rhoncus massa. Nulla non commodo urna, quis laoreet ex. Etiam nec sem sem. Aenean volutpat sapien lectus, a pretium mi finibus consectetur. Sed vestibulum malesuada malesuada. Fusce mattis orci at posuere pulvinar. Sed id odio eu elit fermentum faucibus. Ut vulputate, nibh id tincidunt fermentum, est tellus vehicula dolor, vel ullamcorper ante est eget diam. Proin vulputate sem ante, eu tincidunt justo elementum sit amet. Duis ut efficitur lorem, sed dignissim quam. Etiam condimentum lacus a orci volutpat, nec semper magna elementum. Mauris ultricies sollicitudin purus. Integer sed venenatis nulla. Suspendisse faucibus velit vitae risus dictum porttitor a quis metus. Ut euismod tempor suscipit. Donec auctor ultrices ante, tincidunt scelerisque ante feugiat a.
+        Jeg hedder Radiyah K. Mohammad, jeg er 31 år gammel og bosat på Frederiksberg. Jeg har valgt at studerer multimediedesign for at følge min ambition og drøm om at beskæftige mig med digitalt design og fashion design.
+
+        <br>
+
+        I min fritid er jeg blandt andet glad for at tegne, male og sy.
+
+        <br>
+
+        Jeg har tidligere studeret International virksomhedskommunikation med arabisk som hovedsprog på Syddansk Universitet, så i min bagage har jeg en masse viden omkring kommunikation. Grunden til at jeg skiftede studieretning til multimediedesign, var at jeg hellere vil arbejde med digital kommunikation, da det vil have en stor betydning for min drøm.
+
+        <br>
+
+
 
 
     </p>
