--- a/portfolie.html
+++ b/portfolie.html
@@ -16,7 +16,18 @@
         <br>
         <br>
 
-        <p>Nullam ipsum enim, egestas nec magna nec, semper feugiat est. Sed vel lorem mattis, sollicitudin urna et, pretium risus. Quisque ut luctus felis. Praesent porta orci non dolor fringilla, non fringilla leo accumsan. Nunc cursus neque sit amet eros dignissim, at dapibus ipsum scelerisque. Cras a nulla venenatis, iaculis metus quis, ullamcorper felis. Etiam eu eros sit amet quam semper sagittis. Nam eros quam, sagittis vehicula laoreet in, fermentum id lorem. Pellentesque faucibus laoreet venenatis. Duis porttitor dictum purus, eu mollis nisi pretium iaculis. Fusce eget consequat eros. Etiam in leo laoreet, cursus sem quis, posuere velit. Nam rhoncus erat eu mauris varius, sit amet venenatis libero ultricies. Vivamus in enim eleifend ante tristique auctor. Vestibulum ornare elit sed scelerisque lacinia. Aenean venenatis elit ut nibh vulputate, id ultricies leo facilisis.</p>
+        <p>
+            I dette projekt fik vi studerende en grundlæggende introduktion til HTML og CSS. Det brugte vi til at kode vores egen hjemmeside til de forskellige stilarter. Jeg har kodet min hjemmeside om Popart og fik en masse information om hvordan fonte, overskrifter og brødtekst kan være mere end informativt og være med til at give mediet et unikt og dynamisk udtryk. Jeg implementerede dette på mit site via et utraditionelt valg af font til overskrifterne.
+
+            <br>
+
+            Da vi gik i gang med CSS fik jeg også et indblik i hvordan flexbox bruges til at placere elementer så de er responsive, og jeg brugte det på mit site så det både kan bruges på mobil og på computer. Det gjorde jeg blev andet ved at forstå parent og child elementer i HTMLkoden, og bruge de korrekte termer i CSS. For eksempel at bruge display-flex og flex-direction på et parent element, sådan at man kan få dens 'children' til at flexe
+
+            Du vil blive introduceret til grundlæggende faglige begreber inden for design af digitale brugergrænseflader, digital indholdsproduktion, digital kommunikation, og responsivt webdesign.
+            Du lærer at sætte websider op i html og css og får de første hands-on færdigheder inden for billedbehandling i Photoshop, opsætning af tekst og billeder i Adobe inDesign og Adobe XD.
+
+
+        </p>
 
         <ul>
             <li><a href="http://itsmeradi.dk/kea/01-web/02-html/01_02_03_stilartsite_v2/">Stilartsite</a></li>
@@ -28,7 +39,10 @@
 
         <h1>Grundlæggende animation</h1>
 
-        <p>Nullam ipsum enim, egestas nec magna nec, semper feugiat est. Sed vel lorem mattis, sollicitudin urna et, pretium risus. Quisque ut luctus felis. Praesent porta orci non dolor fringilla, non fringilla leo accumsan. Nunc cursus neque sit amet eros dignissim, at dapibus ipsum scelerisque. Cras a nulla venenatis, iaculis metus quis, ullamcorper felis. Etiam eu eros sit amet quam semper sagittis. Nam eros quam, sagittis vehicula laoreet in, fermentum id lorem. Pellentesque faucibus laoreet venenatis. Duis porttitor dictum purus, eu mollis nisi pretium iaculis. Fusce eget consequat eros. Etiam in leo laoreet, cursus sem quis, posuere velit. Nam rhoncus erat eu mauris varius, sit amet venenatis libero ultricies. Vivamus in enim eleifend ante tristique auctor. Vestibulum ornare elit sed scelerisque lacinia. Aenean venenatis elit ut nibh vulputate, id ultricies leo facilisis.</p>
+        <p>
+            Det første uge-modul giver en introduktion til interaktivt spildesign, baggrundsdesign, karakterdesign og grafik til spil. De studerende udvikler koncept til deres eget interaktive spil, designer spil-elementer samt start og slutskærm til spillet.
+            Det næste uge-modul giver en indføring i JavaScript programmering til at starte og stoppe animationer, sammenkæde dem i sekvenser, og tilføje en smule interaktivitet. De studerende arbejder videre på deres spil fra første modul og får tilføjet animationer og bevægelse, så der kan udspille sig en grovskitse af spillet. Dertil byder modulet på forståelse af animation ud fra udvalgte animationsprincipper.
+        </p>
 
         <ul>
             <li> <a href="http://itsmeradi.dk/kea/02-animation/spil/index.html">Spil</a></li>
@@ -41,7 +55,10 @@
 
         <br>
 
-        <p>Nullam ipsum enim, egestas nec magna nec, semper feugiat est. Sed vel lorem mattis, sollicitudin urna et, pretium risus. Quisque ut luctus felis. Praesent porta orci non dolor fringilla, non fringilla leo accumsan. Nunc cursus neque sit amet eros dignissim, at dapibus ipsum scelerisque. Cras a nulla venenatis, iaculis metus quis, ullamcorper felis. Etiam eu eros sit amet quam semper sagittis. Nam eros quam, sagittis vehicula laoreet in, fermentum id lorem. Pellentesque faucibus laoreet venenatis. Duis porttitor dictum purus, eu mollis nisi pretium iaculis. Fusce eget consequat eros. Etiam in leo laoreet, cursus sem quis, posuere velit. Nam rhoncus erat eu mauris varius, sit amet venenatis libero ultricies. Vivamus in enim eleifend ante tristique auctor. Vestibulum ornare elit sed scelerisque lacinia. Aenean venenatis elit ut nibh vulputate, id ultricies leo facilisis.</p>
+        <p>
+            Dette tema giver dig en grundlæggende indførsel i videoproduktion, herunder forarbejdet inden selve optagelse, selve optagelsen, samt postproduktion. Vi benytter mobiltelefoner til optagelse af video og extern lyd og Premiere pro og Audition til redigering.
+            Du vil blive introduceret til grundlæggende faglige begreber inden for videoprodukttion, og du benytter de færdigheder du har fået i de foregående temaer til at redesigne en virksomheds hjemmeside.
+        </p>
 
         <ul>
             <li> <a href="http://juliegunner.com/kea/03-content/03-redesign/03_02_03_dokumentationssite/index.html">Redesign</a></li>
@@ -54,7 +71,13 @@
 
         <br>
 
-        <p>Nullam ipsum enim, egestas nec magna nec, semper feugiat est. Sed vel lorem mattis, sollicitudin urna et, pretium risus. Quisque ut luctus felis. Praesent porta orci non dolor fringilla, non fringilla leo accumsan. Nunc cursus neque sit amet eros dignissim, at dapibus ipsum scelerisque. Cras a nulla venenatis, iaculis metus quis, ullamcorper felis. Etiam eu eros sit amet quam semper sagittis. Nam eros quam, sagittis vehicula laoreet in, fermentum id lorem. Pellentesque faucibus laoreet venenatis. Duis porttitor dictum purus, eu mollis nisi pretium iaculis. Fusce eget consequat eros. Etiam in leo laoreet, cursus sem quis, posuere velit. Nam rhoncus erat eu mauris varius, sit amet venenatis libero ultricies. Vivamus in enim eleifend ante tristique auctor. Vestibulum ornare elit sed scelerisque lacinia. Aenean venenatis elit ut nibh vulputate, id ultricies leo facilisis.</p>
+        <p>
+            Dette fjerde tema giver dig en grundlæggende forståelse for og erfaring med hvordan samspillet mellem brugere og brugergrænseflader er, samt hvilke teorier, værktøjer og metoder du kan benytte til research, design, test og produktion af digitale løsninger til smartphone, så arbejdet baseres på konkrete indsigter om reelle brugere i stedet for vores egne mavefornemmelser og uholdbare antagelser.
+
+            Omdrejningspunktet for temaet er et samarbejde med en virksomhed, som netop ønsker at forbedre deres brugeres oplevelser på mobilen. Som UX designer indarbejder du i designet brugernes behov og brugssituationer i balance med virksomhedens strategi, behov og mål i design.
+            Vi starter med at se på hvordan et website kan give brugeren det hun har brug for, samtidig med at forretningen bag hænger sammen. Vi ser nærmere på brugeren og brugssituationen gennem teorioplæg, test og interview. Den viden bygger vi videre på i næste trin, hvor vi gennem et designsprint skal skabe fremragende brugeroplevelser af websites på smartphone, som vi også bygger i html, css og javascript. Vi slutter forløbet af med endnu et designsprint, hvor vi løsner rammerne og skal designe og udvikle prototypen på en app til iOS/Android.
+
+        </p>
 
         <ul>
             <li> <a href="https://xd.adobe.com/view/5443f1ff-a134-467c-7d71-dd37c1a481b4-2272/?fbclid=I-wAR1dI-9mJ9o1kGvgTYYmS2BYc7B1u2Rcsotf0p2FDRNpPFqm2_VmHoYZQS4">Native-app</a></li>
