--- a/portfolie.html
+++ b/portfolie.html
@@ -17,14 +17,7 @@
         <br>
 
         <p>
-            I dette projekt fik vi studerende en grundlæggende introduktion til HTML og CSS. Det brugte vi til at kode vores egen hjemmeside til de forskellige stilarter. Jeg har kodet min hjemmeside om Popart og fik en masse information om hvordan fonte, overskrifter og brødtekst kan være mere end informativt og være med til at give mediet et unikt og dynamisk udtryk. Jeg implementerede dette på mit site via et utraditionelt valg af font til overskrifterne.
-
-            <br>
-
-            Da vi gik i gang med CSS fik jeg også et indblik i hvordan flexbox bruges til at placere elementer så de er responsive, og jeg brugte det på mit site så det både kan bruges på mobil og på computer. Det gjorde jeg blev andet ved at forstå parent og child elementer i HTMLkoden, og bruge de korrekte termer i CSS. For eksempel at bruge display-flex og flex-direction på et parent element, sådan at man kan få dens 'children' til at flexe
-
-            Du vil blive introduceret til grundlæggende faglige begreber inden for design af digitale brugergrænseflader, digital indholdsproduktion, digital kommunikation, og responsivt webdesign.
-            Du lærer at sætte websider op i html og css og får de første hands-on færdigheder inden for billedbehandling i Photoshop, opsætning af tekst og billeder i Adobe inDesign og Adobe XD.
+            I dette tema fik vi som opgave at lave et projekt, hvor vi studerende fik introduktion til grundlæggende faglige begreber inden for design af digitale brugergrænseflader, digital indholdsproduktion, digital kommunikation, og responsivt webdesign. Dette brugte vi til at kode vores egen hjemmeside til de forskellige stilarter. Jeg har kodet min hjemmeside om Popart. Vi lærte at sætte websider op i html og css og fik første hands-on færdigheder inden for billedbehandling i Photoshop, opsætning af tekst og billeder i Adobe inDesign og Adobe XD.
 
 
         </p>
@@ -40,12 +33,15 @@
         <h1>Grundlæggende animation</h1>
 
         <p>
-            Det første uge-modul giver en introduktion til interaktivt spildesign, baggrundsdesign, karakterdesign og grafik til spil. De studerende udvikler koncept til deres eget interaktive spil, designer spil-elementer samt start og slutskærm til spillet.
-            Det næste uge-modul giver en indføring i JavaScript programmering til at starte og stoppe animationer, sammenkæde dem i sekvenser, og tilføje en smule interaktivitet. De studerende arbejder videre på deres spil fra første modul og får tilføjet animationer og bevægelse, så der kan udspille sig en grovskitse af spillet. Dertil byder modulet på forståelse af animation ud fra udvalgte animationsprincipper.
+            I dette tema fik vi introduktion til interaktivt spildesign, baggrundsdesign, karakterdesign og grafik til spil. Vi skulle udvikle koncept til vores eget interaktive spil, designe spil-elementer samt start og slutskærm til spillet. Vi fik også indføring i JavaScript programmering til at starte og stoppe animationer, sammenkæde dem i sekvenser, og tilføje en smule interaktivitet.
         </p>
 
         <ul>
             <li> <a href="http://itsmeradi.dk/kea/02-animation/spil/index.html">Spil</a></li>
+        </ul>
+
+        <ul>
+            <li> <a href="http://jonaspaulsen.dk/kea/02-animation/gruppe_28_dokumentationssite/">Sex-og-samfund</a></li>
         </ul>
 
         <br>
@@ -56,8 +52,7 @@
         <br>
 
         <p>
-            Dette tema giver dig en grundlæggende indførsel i videoproduktion, herunder forarbejdet inden selve optagelse, selve optagelsen, samt postproduktion. Vi benytter mobiltelefoner til optagelse af video og extern lyd og Premiere pro og Audition til redigering.
-            Du vil blive introduceret til grundlæggende faglige begreber inden for videoprodukttion, og du benytter de færdigheder du har fået i de foregående temaer til at redesigne en virksomheds hjemmeside.
+            I dette tema fik vi en grundlæggende indtroduktion til videoproduktion, herunder forarbejdet inden selve optagelse, selve optagelsen, samt postproduktion. Vi anvendte mobiltelefoner til optagelse af video og extern lyd og Premiere pro og Audition til redigering. vi blev introduceret til grundlæggende faglige begreber inden for videoproduktion, og vi skulle benytter de færdigheder vi har fået i de foregående temaer til at redesigne en virksomheds hjemmeside.
         </p>
 
         <ul>
@@ -72,10 +67,8 @@
         <br>
 
         <p>
-            Dette fjerde tema giver dig en grundlæggende forståelse for og erfaring med hvordan samspillet mellem brugere og brugergrænseflader er, samt hvilke teorier, værktøjer og metoder du kan benytte til research, design, test og produktion af digitale løsninger til smartphone, så arbejdet baseres på konkrete indsigter om reelle brugere i stedet for vores egne mavefornemmelser og uholdbare antagelser.
-
-            Omdrejningspunktet for temaet er et samarbejde med en virksomhed, som netop ønsker at forbedre deres brugeres oplevelser på mobilen. Som UX designer indarbejder du i designet brugernes behov og brugssituationer i balance med virksomhedens strategi, behov og mål i design.
-            Vi starter med at se på hvordan et website kan give brugeren det hun har brug for, samtidig med at forretningen bag hænger sammen. Vi ser nærmere på brugeren og brugssituationen gennem teorioplæg, test og interview. Den viden bygger vi videre på i næste trin, hvor vi gennem et designsprint skal skabe fremragende brugeroplevelser af websites på smartphone, som vi også bygger i html, css og javascript. Vi slutter forløbet af med endnu et designsprint, hvor vi løsner rammerne og skal designe og udvikle prototypen på en app til iOS/Android.
+            I dette fjerde tema fik vi en grundlæggende forståelse for og erfaring med hvordan samspillet mellem brugere og brugergrænseflader er, samt hvilke teorier, værktøjer og metoder vi kan benytte til research, design, test og produktion af digitale løsninger til smartphone.
+            Gennem designsprint skulle vi skabe brugeroplevelser af websites på smartphone, hvorefter vi anvendte html, css og javascript. Vi skulle slutte forløbet af med endnu et designsprint, hvor vi skulle designe og udvikle prototypen på en app til iOS/Android.
 
         </p>
 
