--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
     <meta name="robots" content="noindex">
     <title>Portfolie-site</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
+    <header>
+        <nav id="sidebar">
 
-    <div id="sidebar">
+            <div class="toggle-btn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
 
-        <div class="toggle-btn" onclick="toggleSidebar()">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
+            <ul>
+                <li><a href="index.html">forside</a></li>
+                <li><a href="om.html">om</a></li>
+                <li><a href="portfolie.html">portfolie</a></li>
+            </ul>
+        </nav>
+    </header>
 
-        <ul>
-            <li><a href="forside.html">forside</a></li>
-            <li><a href="om.html">om</a></li>
-            <li><a href="portfolie.html">portfolie</a></li>
-        </ul>
-    </div>
-
-
-
-    <script src="JavaScript.js"></script>
+    <script src="javaScript.js"></script>
 </body>
 
 </html>
