--- a/om.html
+++ b/om.html
@@ -4,39 +4,49 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex">
     <title>OM</title>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
+    <header>
+        <nav id="sidebar">
 
-    <h1>Om</h1>
+            <div class="toggle-btn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
+            <ul>
+                <li><a href="index.html">forside</a></li>
+                <li><a href="om.html">om</a></li>
+                <li><a href="portfolie.html">portfolie</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="om">
+        <div id="sectionwrapper">
+            <div id="omtxt">
+                <h1>OM</h1>
+                <p>
+                    Jeg hedder Radiyah K. Mohammad, jeg er 31 år gammel og bosat på Frederiksberg. Jeg har valgt at studerer multimediedesign for at følge min ambition og drøm om at beskæftige mig med digitalt design og fashion design.
+                    I min fritid er jeg blandt andet glad for at tegne, male og sy.
+                    Jeg har tidligere studeret International virksomhedskommunikation med arabisk som hovedsprog på Syddansk Universitet, så i min bagage har jeg en masse viden omkring kommunikation. Grunden til at jeg skiftede studieretning til multimediedesign, var at jeg hellere vil arbejde med digital kommunikation, da det vil have en stor betydning for min drøm.
+
+                </p>
+            </div>
+            <div id="ombillede"> <img src="mig.jpg" alt="mig"></div>
+        </div>
+    </section>
+
 
     <br>
 
-    <p>
-        Jeg hedder Radiyah K. Mohammad, jeg er 31 år gammel og bosat på Frederiksberg. Jeg har valgt at studerer multimediedesign for at følge min ambition og drøm om at beskæftige mig med digitalt design og fashion design.
 
-        <br>
-
-        I min fritid er jeg blandt andet glad for at tegne, male og sy.
-
-        <br>
-
-        Jeg har tidligere studeret International virksomhedskommunikation med arabisk som hovedsprog på Syddansk Universitet, så i min bagage har jeg en masse viden omkring kommunikation. Grunden til at jeg skiftede studieretning til multimediedesign, var at jeg hellere vil arbejde med digital kommunikation, da det vil have en stor betydning for min drøm.
-
-        <br>
-
-
-
-
-    </p>
-
-    <br>
-
-    <img src="Mig.jpg" alt="Mig">
-
-    <script src="JavaScript.js"></script>
+    <script src="javaScript.js"></script>
 </body>
 
 </html>
