--- a/portfolie.html
+++ b/portfolie.html
@@ -6,91 +6,87 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="no index">
     <title>Portfolie</title>
+    <link rel="stylesheet" href="style.css">
+
+
 </head>
 
 <body>
+    <header>
+        <nav id="sidebar">
 
-    <section id="tema-1">
-        <h1>Grundlæggende web</h1>
+            <div class="toggle-btn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
 
-        <br>
-        <br>
-
-        <p>
-            I dette tema fik vi som opgave at lave et projekt, hvor vi studerende fik introduktion til grundlæggende faglige begreber inden for design af digitale brugergrænseflader, digital indholdsproduktion, digital kommunikation, og responsivt webdesign. Dette brugte vi til at kode vores egen hjemmeside til de forskellige stilarter. Jeg har kodet min hjemmeside om Popart. Vi lærte at sætte websider op i html og css og fik første hands-on færdigheder inden for billedbehandling i Photoshop, opsætning af tekst og billeder i Adobe inDesign og Adobe XD.
-
-
-        </p>
-
+            <ul>
+                <li><a href="index.html">forside</a></li>
+                <li><a href="om.html">om</a></li>
+                <li><a href="portfolie.html">portfolie</a></li>
+            </ul>
+        </nav>
+    </header>
+ <section id="portfolie">
+        <div id="sectionwrapper">
+    <section id="tema-1" class="section">
+        <h1>Grundlæggende webdesign</h1>
+        <div class="tekst">
+            <p>I dette tema fik vi som opgave at lave et projekt, hvor vi studerende fik introduktion til grundlæggende faglige begreber inden for design af digitale brugergrænseflader, digital indholdsproduktion, digital kommunikation, og responsivt webdesign. Dette brugte vi til at kode vores egen hjemmeside til de forskellige stilarter. Jeg har kodet min hjemmeside om Popart. Vi lærte at sætte websider op i html og css og fik første hands-on færdigheder inden for billedbehandling i Photoshop, opsætning af tekst og billeder i Adobe inDesign og Adobe XD.</p>
+        </div>
         <ul>
             <li><a href="http://itsmeradi.dk/kea/01-web/02-html/01_02_03_stilartsite_v2/">Stilartsite</a></li>
         </ul>
 
-        <br>
-        <br>
+    </section>
 
-
+    <section id="tema-2" class="section 2">
         <h1>Grundlæggende animation</h1>
-
-        <p>
-            I dette tema fik vi introduktion til interaktivt spildesign, baggrundsdesign, karakterdesign og grafik til spil. Vi skulle udvikle koncept til vores eget interaktive spil, designe spil-elementer samt start og slutskærm til spillet. Vi fik også indføring i JavaScript programmering til at starte og stoppe animationer, sammenkæde dem i sekvenser, og tilføje en smule interaktivitet.
-        </p>
-
+        <div class="tekst">
+            <p>I dette tema fik vi introduktion til interaktivt spildesign, baggrundsdesign, karakterdesign og grafik til spil. Vi skulle udvikle koncept til vores eget interaktive spil, designe spil-elementer samt start og slutskærm til spillet. Vi fik også indføring i JavaScript programmering til at starte og stoppe animationer, sammenkæde dem i sekvenser, og tilføje en smule interaktivitet.</p>
+        </div>
         <ul>
             <li> <a href="http://itsmeradi.dk/kea/02-animation/spil/index.html">Spil</a></li>
         </ul>
+
 
         <ul>
             <li> <a href="http://jonaspaulsen.dk/kea/02-animation/gruppe_28_dokumentationssite/">Sex-og-samfund</a></li>
         </ul>
 
-        <br>
-        <br>
-
-        <h1>Grundlæggende indhold</h1>
-
-        <br>
-
-        <p>
-            I dette tema fik vi en grundlæggende indtroduktion til videoproduktion, herunder forarbejdet inden selve optagelse, selve optagelsen, samt postproduktion. Vi anvendte mobiltelefoner til optagelse af video og extern lyd og Premiere pro og Audition til redigering. vi blev introduceret til grundlæggende faglige begreber inden for videoproduktion, og vi skulle benytter de færdigheder vi har fået i de foregående temaer til at redesigne en virksomheds hjemmeside.
-        </p>
-
-        <ul>
-            <li> <a href="http://juliegunner.com/kea/03-content/03-redesign/03_02_03_dokumentationssite/index.html">Redesign</a></li>
-        </ul>
-
-        <br>
-        <br>
-
-        <h1>Grundlæggende UX</h1>
-
-        <br>
-
-        <p>
-            I dette fjerde tema fik vi en grundlæggende forståelse for og erfaring med hvordan samspillet mellem brugere og brugergrænseflader er, samt hvilke teorier, værktøjer og metoder vi kan benytte til research, design, test og produktion af digitale løsninger til smartphone.
-            Gennem designsprint skulle vi skabe brugeroplevelser af websites på smartphone, hvorefter vi anvendte html, css og javascript. Vi skulle slutte forløbet af med endnu et designsprint, hvor vi skulle designe og udvikle prototypen på en app til iOS/Android.
-
-        </p>
-
-        <ul>
-            <li> <a href="https://xd.adobe.com/view/5443f1ff-a134-467c-7d71-dd37c1a481b4-2272/?fbclid=I-wAR1dI-9mJ9o1kGvgTYYmS2BYc7B1u2Rcsotf0p2FDRNpPFqm2_VmHoYZQS4">Native-app</a></li>
-        </ul>
-
-
-        <ul>
-            <li> <a href="04_03_01_native_app_16.pdf">Dokumentation</a></li>
-        </ul>
-
-
 
     </section>
-    <section id="tema-2"></section>
-    <section id="tema-3"></section>
-    <section id="tema-4"></section>
 
+    <section id="tema-3" class="section 3">
+        <h1>Grundlæggende indhold</h1>
+        <div class="tekst">
+            <p>I dette tema fik vi en grundlæggende indtroduktion til videoproduktion, herunder forarbejdet inden selve optagelse, selve optagelsen, samt postproduktion. Vi anvendte mobiltelefoner til optagelse af video og extern lyd og Premiere pro og Audition til redigering. vi blev introduceret til grundlæggende faglige begreber inden for videoproduktion, og vi skulle benytter de færdigheder vi har fået i de foregående temaer til at redesigne en virksomheds hjemmeside.</p>
+        </div>
 
+        <ul>
+            <li> <a href="http://juliegunner.com/kea/03-content/03-redesign/03_02_03_dokumentationssite/index.html">Redign</a></li>
+        </ul>
 
-    <script src="JavaScript.js"></script>
+    </section>
+
+    <section id="tema-4" class="section 4">
+        <h1>Grundlæggende UX</h1>
+        <div class="tekst">
+            <p>
+                I dette fjerde tema fik vi en grundlæggende forståelse for og erfaring med hvordan samspillet mellem brugere og brugergrænseflader er, samt hvilke teorier, værktøjer og metoder vi kan benytte til research, design, test og produktion af digitale løsninger til smartphone.
+                Gennem designsprint skulle vi skabe brugeroplevelser af websites på smartphone, hvorefter vi anvendte html, css og javascript. Vi skulle slutte forløbet af med endnu et designsprint, hvor vi skulle designe og udvikle prototypen på en app til iOS/Android.
+            </p>
+        </div>
+        <li> <a href="https://xd.adobe.com/view/5443f1ff-a134-467c-7d71-dd37c1a481b4-2272/?fbclid=I-wAR1dI-9mJ9o1kGvgTYYmS2BYc7B1u2Rcsotf0p2FDRNpPFqm2_VmHoYZQS4">Native-app</a></li>
+
+        <li> <a href="04_03_01_native_app_16.pdf">Dokumentation</a></li>
+
+    </section>
+     </div>
+    </section>
+
+    <script src="javaScript.js"></script>
 </body>
 
 </html>
